# dd-back-up

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json
src/: logger.rs  main.rs
src/dd_back_up/: config.rs  mod.rs  utils.rs
src/dd_back_up/back_up/: back_up.rs  back_ups.rs  command_output.rs  device.rs  filesystem.rs  lsblk.rs  mod.rs
src/dd_backup/: config.rs  mod.rs
src/dd_backup/backup/: backup.rs  backups.rs  device.rs  filesystem.rs  mod.rs
src/run/: config.rs  mod.rs  utils.rs
src/run/backup/: backup.rs  backups.rs  command_output.rs  device.rs  filesystem.rs  lsblk.rs  mod.rs
src/run/backup_run/: backup.rs  backups.rs  command_output.rs  device.rs  filesystem.rs  mod.rs
