[package]
name = "dd_backup"
version = "0.1.0"
edition = "2021"
author = "arminfro"
about = "about"
long_about = "long_about"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
chrono-humanize = "0.2.2"
clap = { version = "4.3.3", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.0"
libc = "0.2.146"
log = "0.4"
nix = "0.26.2"
relative-path = "1.8.0"
serde  = {version="1.0.164", features = ["derive"] }
serde_json = "1.0.96"
