[package]
name = "dd_backup"
version = "0.1.2"
edition = "2021"
author = "arminfro"

license = "MIT"
description = "A utility for creating device backups using dd"
homepage = "https://github.com/arminfro/dd_backup"
documentation = "https://docs.rs/dd_backup"
repository = "https://github.com/arminfro/dd_backup"
readme = "README.md"

[package.metadata]
keywords = ["backup"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.26"
chrono-humanize = "0.2.2"
clap = { version = "4.3.3", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.0"
libc = "0.2.146"
log = "0.4"
nix = "0.26.2"
relative-path = "1.8.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
